src/ui/render/snapshots/herdr_worktree_nav__ui__render__branches__tests__draws_the_destination_step_with_split_here_selected.snap
---
source: src/ui/render/branches.rs
expression: "branches_screen(&state, 92, 12)"
---
" where should chore/deps go?                                                                "
"────────────────────────────────────────────────────────────────────────────────────────────"
" here            split right               w1  app / agents                                 "
"                 split down                ┌────┬────┐                                      "
" existing tab    w1  app / logs            ├────┴────┤                                      "
" existing space  w3  notes → new tab       └─────────┘                                      "
" new space       on its own                                                                 "
" existing tab    w3  notes / zoomed                                                         "
"                                                                                            "
"                                                                                            "
" chore/deps opens beside the pane you came from, split right ───────────────────────────────"
" ↵ open here  ↑↓ move  esc back  q close                                                    "
