src/ui/render/snapshots/herdr_worktree_nav__ui__render__branches__tests__draws_the_prompt_for_a_branch_started_from_the_one_under_the_cursor.snap
---
source: src/ui/render/branches.rs
expression: "branches_screen(&state, 92, 12)"
---
" + new branch from feat/login: feat/login-v2█                                    5 branches "
" me/app · /src/app ─────────────────────────────────────────────────────────────────────────"
"   ● feat/login   running      #123 Add the login screen (draft)                            "
"   ○ fix/crash    checked out  latest work on fix/crash                                     "
"   · main         local        latest work on main                                          "
"   · chore/deps   local        latest work on chore/deps                                    "
"   ↓ feat/search  remote                                                                    "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" feat/login · open in w2:p1 · /wt/feat-login · #123 Add the login screen (draft) ───────────"
" ↵ next  ctrl+u clear  esc back                                                             "
